--- a/prueba.css
+++ b/prueba.css
@@ -7,4 +7,13 @@ body{
     font-family: arial;
     background-color: aqua;
     color: rgb(78, 72, 72);
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+header{
+    width: 100%;
+    height: auto;
+    border: 2px solid green;
 }
