--- a/prueba.css
+++ b/prueba.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    font-family: arial;
+    font-family: 'Courier New', Courier, monospace;
     background-color: aqua;
     color: rgb(78, 72, 72);
 }
