--- a/prueba.css
+++ b/prueba.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: 'Courier New', Courier, monospace;
-  background-color: aqua;
+  background-color: white;
   color: #4e4848;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -24,10 +24,18 @@ body {
           flex-direction: column;
 }
 
-header {
-  width: 100%;
+body header {
+  width: 80%;
   height: auto;
   border: 2px solid green;
   text-align: center;
+  background-color: black;
+  color: white;
+}
+
+body main {
+  width: 80%;
+  height: auto;
+  border: 2px dotted green;
 }
 /*# sourceMappingURL=prueba.css.map */
