la fuente fue transformada en esta rama

--- a/prueba.css
+++ b/prueba.css
@@ -37,5 +37,6 @@ body main {
   width: 80%;
   height: auto;
   border: 2px dotted green;
+  font-weight: bold;
 }
 /*# sourceMappingURL=prueba.css.map */
